reserveunit page Created

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!--Main Navbar-->
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-              <a class="navbar-brand" href="#">Brand</a>
+              <a class="navbar-brand" href="#" style="font-size: 2rem;">Brand</a>
               <!-- <a class="nav-link" href="#">Home</a> -->
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,15 +25,15 @@
               <div class="collapse navbar-collapse" style="text-transform: uppercase;" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link active" href="index.html" style="margin: 5px 0px 0px 30px; font-weight: 600; color: #fff;">Home</a>
                   </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="reserveunit.html">Reserve unit</a>
+                    <a class="nav-link" href="reserveunit.html" style="margin: 5px 10px 0px 0px; color: #fff; font-weight: 600;">Reserve unit</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -49,11 +49,11 @@
           <div class="row">
             <div class="col-md-6 intro-text">
               <h2>Catskill Self Storage</h2>
-              <h3>Convenient & Affordable</h3>
+              <h3>Conveient & Affordable</h3>
             </div>
             <div class="col-md-6 intro-buttons">
-              <button type="button" class="btn btn-outline-success btn-sm">View Rates</button>
-              <button type="button" class="btn btn-success btn-sm">Reserve Unit</button>
+              <button type="button" class="btn btn-outline-colored">View Rates</button>
+              <button type="button" class="btn btn-colored">Reserve Unit</button>
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
         <p>Him boisterous invitation dispatched had connection inhabiting projection. By mutual an mr danger garret edward an. Diverted as strictly exertion addition no disposal by stanhill. This call wife do so sigh no gate felt.
           How promotion excellent curiosity yet attempted happiness. Gay prosperous impression had conviction.
           For every delay death ask style.</p>
-        <button type="button" class="btn btn-success btn-sm">Reserve Your Unit</button>
+        <button type="button" class="btn btn-colored">Reserve Your Unit</button>
       </div>
     </section>
 
