--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!--Main Navbar-->
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-              <a class="navbar-brand" href="#" style="font-size: 2rem;">Brand</a>
+              <a class="navbar-brand" href="#" style="font-size: 1.8rem;">Brand</a>
               <!-- <a class="nav-link" href="#">Home</a> -->
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
               <div class="collapse navbar-collapse" style="text-transform: uppercase;" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html" style="margin: 5px 0px 0px 30px; font-weight: 600; color: #fff;">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                   </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="reserveunit.html" style="margin: 5px 10px 0px 0px; color: #fff; font-weight: 600;">Reserve unit</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
+                    <a class="nav-link" href="contact.html" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
                   </li>
                 </ul>
               </div>
