--- a/reserveunit.html
+++ b/reserveunit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/myStyle.css">
   </head>
-  <body data-spy="scroll" data-target=".navbar">
+  <body>
     <header>
       <!--Contact Navbar-->
 
@@ -16,7 +16,7 @@
       <!--Main Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#" style="font-size: 2rem;">Brand</a>
+          <a class="navbar-brand" href="#" style="font-size: 1.8rem;">Brand</a>
           <!-- <a class="nav-link" href="#">Home</a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" style="text-transform: uppercase;" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html" style="margin: 5px 0px 0px 30px; color: #fff; font-weight: 600;">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="reserveunit.html" style="margin: 5px 10px 0px 0px; color: #fff; font-weight: 600;">Reserve unit</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
+                <a class="nav-link" href="contact.html" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -51,7 +51,7 @@
           <div class="col-md-8">
             <form class="" action="" method="post">
               <div class="row">
-                <button type="button" class="btn btn-colored" style="margin: 5px; padding-right: 50px">Tenant</button>
+                <button type="button" class="btn btn-colored" style="margin: 5px; padding-right: 50px" disabled>Tenant</button>
                 <button type="button" class="btn btn-outline-secondary" disabled style="padding-right: 60px; margin: 5px">Unit</button>
                 <button type="button" class="btn btn-outline-secondary" disabled style="margin: 5px"> Confirmation</button>
               </div>
@@ -73,7 +73,7 @@
               </div>
 
               <input type="text" name="phone" value="" placeholder="Address Line 1 *" required>
-              <input type="text" name="phone" value="" placeholder="Address Line 2 *">
+              <input type="text" name="phone" value="" placeholder="Address Line 2">
 
               <div class="row">
                 <div class="col-md-6">
@@ -88,7 +88,7 @@
 
               <!-- <input type="button" name="Next" value="Next" class="btn btn-success" style="float: right;"> -->
 
-              <button type="button" name="button" class="btn btn-colored"  style=" float: right; margin: 10px 10px 25px 0px; padding: 5px 30px;">Next</button>
+              <button type="Submit" name="button" class="btn btn-colored"  style=" float: right; margin: 10px 10px 25px 0px; padding: 5px 30px;">Next</button>
             </form>
           </div>
           <div class="col-md-4">
