--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,11 @@
       <!--Main Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#" style="font-size: 1.8rem;">Brand</a>
+           <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
+          <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
+            <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
+            Brand
+          </a>
           <!-- <a class="nav-link" href="#">Home</a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,11 +46,81 @@
       <!--Main Navbar Ends Here-->
     </header>
 
-    
-
-    <section id="footer" class="text-center">
-        &copy; 2016 Brand Self Storage
+    <section id="contactUs">
+      <div class="heading text-center">
+        <h2>Contact Us</h2>
+      </div>
+      <div class="container" style="margin-top: 30px; margin-bottom: 30px;">
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.810018543451!2d77.6380471142523!3d12.983999890847747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16ba5ba552e7%3A0x6a9ed04607c46895!2scode+parva+technologies!5e0!3m2!1sen!2sin!4v1537355940485" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+      </div>
     </section>
+
+
+    <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>contact form</h1>
+          <form class="" action="" method="post">
+            <input type="text" name="contact-name" value="" placeholder="Name *" required>
+            <input type="email" name="contact-email" value="" placeholder="Email *" required>
+            <input type="text" name="subject" value="" placeholder="Subject *" required>
+            <textarea name="message" rows="5" cols="59" placeholder="Message *" style="margin: 10px -10px; padding:5px; "required></textarea>
+            <button type="submit" name="button" class="btn btn-colored" style="float: right; margin-right: 10px;">Next</button>
+          </form>
+
+        </div>
+        <div class="col-md-6">
+          <h1>Hours</h1>
+          <table style="border: none;  width: 100%;">
+            <tbody>
+              <tr style="padding-top: 50px; padding-bottom: 50px;">
+                <td>Mon-Fri:</td>
+                <td>9:00 am - 6:00 am</td>
+              </tr>
+              <tr>
+                <td>Sat:</td>
+                <td>9:00 am - 3:00 pm</td>
+              </tr>
+              <tr>
+                <td>Sunday:</td>
+                <td>8:00 am - 12:pm</td>
+              </tr>
+              <tr>
+                <td>Facility access with pin code:</td>
+                <td>24 Hours a day, 7 days a week</td>
+              </tr>
+            </tbody>
+          </table>
+
+            <h1>Contact Info</h1>
+            <table style="border: none; width: 100%;">
+              <tbody>
+                <tr>
+                  <td style="width: 30%;">Address:</td>
+                  <td>5877 Cauterskill Road Catskill, NY 12414</td>
+                </tr>
+                <tr>
+                  <td>Email:</td>
+                  <td>catskillselfstorage@gmail.com</td>
+                </tr>
+                <tr>
+                  <td>Phone:</td>
+                  <td>518-943-3003</td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+      </div>
+    </div>
+    </section>
+
+
+    <footer id="footer" class="text-center">
+        Copyright 2016 Brand Self Storage
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
