--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <!--Main Navbar-->
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-              <a class="navbar-brand" href="#" style="font-size: 1.8rem;">Brand</a>
+               <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
+              <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
+                <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
+                Brand
+              </a>
               <!-- <a class="nav-link" href="#">Home</a> -->
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -140,16 +144,22 @@
             <p><strong>Office Hours:</strong> 6PM (Mon Sun)</p>
           </div>
           <div class="col-md-6">
+
+            <div class="container" style="margin-top: 30px; margin-bottom: 30px;">
+                <div class="map-responsive">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.810018543451!2d77.6380471142523!3d12.983999890847747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16ba5ba552e7%3A0x6a9ed04607c46895!2scode+parva+technologies!5e0!3m2!1sen!2sin!4v1537355940485" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+            </div>
              <!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div><style>.mapouter{text-align:right;height:300px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:500px;}</style></div>-->
-             <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:250px;width:300px;'><div id='gmap_canvas' style='height:250px;width:300px;'></div><div><small><a href="https://embedgooglemaps.com/de/">https://embedgooglemaps.com/de/</a></small></div><div><small><a href="https://webtrafficgeeks.org/website-traffic/indian-traffic">https://webtrafficgeeks.org/website-traffic/indian-traffic</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(12.9715987,77.59456269999998),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(12.9715987,77.59456269999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Bangalore</strong><br>Bangalore, India<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+             <!-- <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:250px;width:300px;'><div id='gmap_canvas' style='height:250px;width:300px;'></div><div><small><a href="https://embedgooglemaps.com/de/">https://embedgooglemaps.com/de/</a></small></div><div><small><a href="https://webtrafficgeeks.org/website-traffic/indian-traffic">https://webtrafficgeeks.org/website-traffic/indian-traffic</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(12.9715987,77.59456269999998),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(12.9715987,77.59456269999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Bangalore</strong><br>Bangalore, India<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script> -->
           </div>
         </div>
       </div>
     </section>
 
-    <section id="footer" class="text-center">
-      &copy; 2016 Brand Self Storage
-    </section>
+    <footer id="footer" class="text-center">
+      Copyright 2016 Brand Self Storage
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
