--- a/reserveunit.html
+++ b/reserveunit.html
@@ -16,7 +16,11 @@
       <!--Main Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#" style="font-size: 1.8rem;">Brand</a>
+           <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
+          <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
+            <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
+            Brand
+          </a>
           <!-- <a class="nav-link" href="#">Home</a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -125,9 +129,9 @@
       </div>
     </section>
 
-    <section id="footer" class="text-center">
-      &copy; 2016 Brand Self Storage
-    </section>
+    <footer id="footer" class="text-center">
+      Copyright 2016 Brand Self Storage
+    </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
