Contact Us page Created

--- a/contact.html
+++ b/contact.html
@@ -72,11 +72,11 @@
           </form>
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 contact-tables">
           <h1>Hours</h1>
           <table style="border: none;  width: 100%;">
             <tbody>
-              <tr style="padding-top: 50px; padding-bottom: 50px;">
+              <tr>
                 <td>Mon-Fri:</td>
                 <td>9:00 am - 6:00 am</td>
               </tr>
