--- a/index.html
+++ b/index.html
@@ -3,46 +3,74 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>Brand</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/myStyle.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
     <header>
       <!--Contact Navbar-->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="contact-bar">
+        <div class="container">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <span> <i class="fas fa-map-marker-alt" style="color: #74d6b9;"></i> &nbsp;5877 Cauterskill Road Catskill, NY 12414</span>
+              </li>
+              <li class="nav-item">
+                <span><i class="far fa-envelope-open" style="color: #74d6b9;"></i>&nbsp; catskillselfstorage@gmail.com</span>
+              </li>
+              <li class="nav-item">
+                <span><i class="fas fa-phone" style="color: #74d6b9;"></i>&nbsp;518-943-3003</span>
+              </li>
+            </ul>
 
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="https://facebook.com" target="_blank"> <img src="img/fb.png" alt="" height="22px" width="22px"> </a>
+              </li>
+              <li class="nav-item">
+                <a href="https://google.com" target="_blank"> <img src="img/g.png" alt="" height="16px" width="16px"> </a>
+              </li>
+              <li class="nav-item">
+                <a href="https://twitter.com" target="_blank"> <img src="img/twit.png" alt="" height="16px" width="16px"> </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        </nav>
       <!--Contact Navbar Ends Here-->
 
       <!--Main Navbar-->
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container">
-               <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
-              <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
-                <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
-                Brand
-              </a>
-              <!-- <a class="nav-link" href="#">Home</a> -->
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="menu-bar">
+        <div class="container">
+           <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
+             <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
+               <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
+               Brand
+             </a>
+             <!-- <a class="nav-link" href="#">Home</a> -->
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
 
-              <div class="collapse navbar-collapse" style="text-transform: uppercase;" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                  </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="reserveunit.html" style="margin: 5px 10px 0px 0px; color: #fff; font-weight: 600;">Reserve unit</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            </nav>
+             <div class="collapse navbar-collapse" style="text-transform: uppercase;" id="navbarSupportedContent">
+               <ul class="navbar-nav mr-auto">
+                 <li class="nav-item">
+                   <a class="nav-link active" href="index.html">Home</a>
+                 </li>
+               </ul>
+               <ul class="navbar-nav ml-auto">
+                 <li class="nav-item">
+                   <a class="nav-link" href="reserveunit.html" style="margin: 5px 10px 0px 0px; color: #fff; font-weight: 600;">Reserve unit</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="contact.html" style="margin: 5px 20px 0px 0px; color: #fff; font-weight: 600;">Contact Us</a>
+                 </li>
+               </ul>
+             </div>
+          </div>
+        </nav>
       <!--Main Navbar Ends Here-->
     </header>
 
