Internal Links Added

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             </div>
             <div class="col-md-6 intro-buttons">
               <button type="button" class="btn btn-outline-colored">View Rates</button>
-              <button type="button" class="btn btn-colored">Reserve Unit</button>
+              <!-- <button type="button" class="btn btn-colored">Reserve Unit</button> -->
+              <a href="reserveunit.html" class="btn btn-colored">Reserve Unit</a>
             </div>
           </div>
         </div>
@@ -156,7 +157,8 @@
         <p>Him boisterous invitation dispatched had connection inhabiting projection. By mutual an mr danger garret edward an. Diverted as strictly exertion addition no disposal by stanhill. This call wife do so sigh no gate felt.
           How promotion excellent curiosity yet attempted happiness. Gay prosperous impression had conviction.
           For every delay death ask style.</p>
-        <button type="button" class="btn btn-colored">Reserve Your Unit</button>
+        <!-- <button type="button" class="btn btn-colored">Reserve Your Unit</button> -->
+        <a href="reserveunit.html" class="btn btn-colored">Reserve Your Unit</a>
       </div>
     </section>
 
