--- a/reserveunit.html
+++ b/reserveunit.html
@@ -45,7 +45,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="menu-bar">
         <div class="container">
            <!-- <img src="img/logo.png" height="32px" width="32px" alt=""> -->
-             <a class="navbar-brand" href="#" style="font-size: 1.8rem; padding-left: 5px;">
+             <a class="navbar-brand" href="index.html" style="font-size: 1.8rem; padding-left: 5px;">
                <img src="img/logo.png" width="31" height="31" class="d-inline-block align-top" style="margin-top: 7px;" alt="">
                Brand
              </a>
