--- a/reserveunit.html
+++ b/reserveunit.html
@@ -15,13 +15,13 @@
         <div class="container">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <span> <i class="fas fa-map-marker-alt" style="color: #74d6b9;"></i> &nbsp;5877 Cauterskill Road Catskill, NY 12414</span>
+                <span> <i class="fas fa-map-marker-alt"></i> &nbsp;5877 Cauterskill Road Catskill, NY 12414</span>
               </li>
               <li class="nav-item">
-                <span><i class="far fa-envelope-open" style="color: #74d6b9;"></i>&nbsp; catskillselfstorage@gmail.com</span>
+                <span><i class="far fa-envelope-open"></i>&nbsp; catskillselfstorage@gmail.com</span>
               </li>
               <li class="nav-item">
-                <span><i class="fas fa-phone" style="color: #74d6b9;"></i>&nbsp;518-943-3003</span>
+                <span><i class="fas fa-phone"></i>&nbsp;518-943-3003</span>
               </li>
             </ul>
 
